perf: unify function context creation and simplify event tracking
- Create full function context with closure info in Interpreter (single allocation)
- Replace onFunctionCall with CONTEXT_ENTER event for function tracking
- Add getCallArgs(), getReturnValue(), getErrorThrown(), getExitType() to Context
- Remove deprecated onFunctionCall from ContextListener
- Simplify CoreContext constructors (DRY unified child context constructor)
- Add regression test for nested function return value edge case

Co-Authored-By: Claude Opus 4.5 <noreply@anthropic.com>